overflow issue fixed

--- a/css/master.css
+++ b/css/master.css
@@ -340,7 +340,8 @@ p {
     width: 400px;
     border: 0;
     background-color: #FAF5F2;
-    margin-right: 30px; }
+    margin-right: 30px;
+    margin-bottom: 30px; }
 
 @media only screen and (max-width: 991.98px) {
   .subscribe-section {
@@ -395,7 +396,7 @@ p {
 .theme-border {
   position: absolute;
   top: -16px;
-  width: 106%;
+  width: 100%;
   left: 0; }
   .theme-border ul {
     margin-left: 0;
@@ -403,7 +404,7 @@ p {
     .theme-border ul li {
       height: 5px;
       display: inline-block;
-      width: 24%; }
+      width: 24.7%; }
       .theme-border ul li:nth-child(1) {
         background: #17B5F0; }
       .theme-border ul li:nth-child(2) {
