--- a/scss/subscribe-section.scss
+++ b/scss/subscribe-section.scss
@@ -37,6 +37,7 @@
         border: 0;
         background-color: $light-bg;
         margin-right: 30px;
+        margin-bottom: 30px;
     }
 }
 
