--- a/scss/theme-border.scss
+++ b/scss/theme-border.scss
@@ -1,7 +1,7 @@
 .theme-border{
     position: absolute;
     top: -16px;
-    width: 106%;
+    width: 100%;
     left: 0;
     ul{
         margin-left: 0;
@@ -9,7 +9,7 @@
         li{
             height: 5px;
             display: inline-block;
-            width: 24%;
+            width: 24.7%;
             &:nth-child(1){
                 background: $light-blue;
             }
